v2.7.0/tqdm/tqdm_galaxy_llm.md
# ARCHITECTURAL_BRIEF: tqdm
> INSTRUCTION: Deterministic Syntactic Analysis. Base architectural insights on Structural Magnitude, Extracted Signatures, and Risk overlays.

## 0. FORENSIC TRACEABILITY
| Metadata | Value |
|---|---|
| **Engine** | `GitGalaxy Scope vlatest (Delta Mode)` |
| **Git Remote** | `N/A` |
| **Zero-Dependency Mode** | `Inactive (Full Precision)` |

## 0.5 AI THREAT AUDIT STATUS
> **✅ SECURE_NO_THREATS_DETECTED**
> XGBoost Structural Signatures model found no malicious artifacts.

## 1. SYSTEM ROLE & PHILOSOPHY
> You are a Senior Technical Storyteller and Codebase Architect. GitGalaxy has translated the non-visual architecture of this repository into measurable Structural Signatures (regex-derived counts, not an AST or compiler pass). Your job is to weave those signatures into a coherent, factual narrative about how this system is built -- its architecture, design patterns, and complexity -- not to render a verdict.
> 
> **CORE DIRECTIVES:**
> 1. **Narrate the Architecture, Don't Judge the Author:** Frame every observation as a blameless description of the system's physical reality. A high Structural Surface Profile reading (formerly called Risk Exposure; e.g., Complexity Load, formerly Cognitive Load Exposure) describes where the architecture may be drifting into fragile territory, not developer incompetence -- it is a prompt to investigate, never a verdict. These are activity/content surface meters, not defect-probability estimates (gitgalaxy#2991, evidence in #2982) -- describe what is there, don't imply it predicts a bug.
> 2. **The Physical Reality Rule:** Base your narrative strictly on the provided Structural Signatures and the numbers derived from them. Do not hallucinate meaning, and do not restate a heuristic's raw label (e.g. a 'Logic Bomb' or 'O(2^N)' flag) as a confirmed finding of malice or a guaranteed defect -- explain what the signature actually measures, weave it into the story of the file, and let the reader draw their own conclusion.
> 3. **Risk vs. Defense:** Code is a balance. A file with high `flux` (state mutation) is risky unless balanced by `freeze_hits` (immutability). High `danger` is brittle unless wrapped in `safety`. Tell that balance as part of the narrative, not as an isolated alarm.
> 
> **THE STRUCTURAL SIGNATURE LEXICON:**
> * **Structure & Mass:** `branch` (splits), `linear` (paths), `args` (coupling), `func_start` (entry points).
> * **Risk & Volatility:** `danger` (dynamic execution), `flux` (state mutation), `graveyard` (commented-out logic), `safety_neg` (security bypasses).
> * **Architecture & Domain:** `io` (network latency), `concurrency` (async orchestration), `api` (public surface), `import` (dependencies).
> * **Defensive Guardrails:** `safety` (Error handling), `freeze_hits` (immutability), `cleanup` (state destruction).
## 2. THE 13-POINT STRUCTURAL SURFACE PROFILE (formerly Risk Exposure) ANALYSIS (EQUATIONS & CONTEXT)
> **How the SAST Engine Calculates the Structural Surface Profile (Lower 0 - Higher Surface Presence 100%):**
> Most scores use a Sigmoid curve based on density (Hits / LOC) to prevent massive files from mathematically hiding their flaws. These 13 vectors are activity/content surface meters -- they describe what is present in a file, not the probability of a defect. The temporal-crucible validation record (gitgalaxy#2982, ~3,550 scanned snapshots, two repositories, pre-registered) tested the per-file-standing-risk claim to exhaustion and found it does not hold; see docs/vectors.md for the full record and gitgalaxy#2991 for the rename this drove. `risk_*` names remain the underlying column/key names for schema compatibility -- see the 'formerly' aliases below.
> 
> 1. **Complexity Load** (formerly Cognitive Load Exposure)**:** Measures the mental effort required for a developer to read and understand the file. `Density(Branches + (Flux * 2) + Async/Danger)` mitigated by `Doc Coverage`.
> 2. **Guard Balance** (formerly Error & Exception Risk Exposure)**:** Measures structural integrity and resilience against runtime errors. `Net Exposure = (Danger + Safety_Neg + Flux) - (Safety + Tests + Docs)`.
> 3. **Debt Markers** (formerly Tech Debt Exposure)**:** Measures the density of developer-annotated structural stress. `Density(TODOs [1x] + FIXMEs/Hacks [3x] + Empty Stubs [0.5x])`.
> 4. **Test Surface** (formerly Verification Risk Exposure)**:** Evaluates test coverage by comparing a function's structural complexity against the scope of the tests validating it.
> 5. **Connectivity** (formerly API Risk Exposure)**:** Measures the public surface area of a module. `Ratio(API Hits / Total Functions & Classes)`.
> 6. **Concurrency Surface** (formerly Concurrency Risk Exposure)**:** Measures the density of asynchronous operations, threading, and parallel execution logic.
> 7. **Mutation Surface** (formerly State Flux Risk Exposure)**:** Measures the frequency of data mutation and variable reassignment.
> 8. **Dead Code Surface** (formerly Commented Logic (dead code))**:** Measures the presence of abandoned, commented-out logic blocks.
> 9. **Spec Alignment** (formerly Spec Match Risk Exposure)**:** Measures how closely code aligns with formal specifications or architectural requirements.
> 10. **Historical Stability** (formerly Stability; predictive layer, promotion pending #2987)**:** Measures the recency of edits relative to the repository's entire lifespan. Part of the family the validation record actually supports as predictive -- currently ablated to zero in every scan (`GITGALAXY_DISABLE_GIT_HISTORY`, temporal-crucible#29).
> 11. **Historical Churn** (formerly Deep Churn; predictive layer, promotion pending #2987)**:** Measures the historical volatility and frequency of modification. Same predictive-layer status and ablation caveat as Historical Stability above.
> 12. **Documentation Surface** (formerly Documentation Risk Exposure)**:** Of the units extracted from a file, the weight-share a reader cannot recover from documentation -- public units count double, runtime-dynamic units count more, and a folder-level documentation umbrella shields the whole file. A ratio over units, not a density over lines; files with no extracted units have no value.
> 13. **Indentation Consistency:** Measures formatting alignment (Tabs vs. Spaces). Provided for codebase standardization context, not a functional risk.
> 
> **--- THE SECURITY & VULNERABILITY LENS ---**
> 14. **Obfuscation & Evasion Risk:** Measures the density of obfuscated logic, packed strings, and non-standard encoding.
> 15. **Logic Bomb / Sabotage Risk:** Measures condition-heavy execution leading to destructive OS, memory, or process commands.
> 16. **Injection Surface Risk Exposure:** Measures external network/I/O input flowing directly into dynamic execution contexts (XSS, SQLi, RCE).
> 17. **Memory Corruption Risk Exposure:** Measures the density of raw pointer math and manual memory allocations (Buffer Overflows, UAF).
> 18. **Credential Material** (formerly Secrets Risk Exposure)**:** Measures the presence of hardcoded credentials exposed to logs or globals.
> 
> **--- STRUCTURAL MAGNITUDE (NOT RISK) ---**
> **19. Function Magnitude (Impact Score):** Measures the physical footprint and 'heaviness' of a specific function. `((BranchHits + 1) * (Args + 1) + (0.05 * LOC)) * 10`. This is NOT a risk score.
> **20. File Magnitude (Total Impact):** Measures the total structural impact of a file. `Sum(Function Impacts) + API + Concurrency + Flux + (LOC / 50)`. This is NOT a risk score.

## 3. MACRO STATE
| Metric | Value |
|---|---|
| Total Artifacts | 81 |
| Analyzed Artifacts (Scanned) | 69 |
| Excluded Artifacts (Unparsable data, binaries, unsupported formats) | 12 |
| Total LOC | 5786 |
| Volatility Index | 0.0 |
| % Scanned of codebase = | 85.2% |
| Dominant Lang | PYTHON |

## 3.5 MACRO-NETWORK TOPOLOGY (Resilience & Coupling)
| Metric | Value | Interpretation |
|---|---|---|
| Modularity | 0.4744 | High = Clean micro-boundaries. Low = Spaghetti coupling. |
| Assortativity | -0.3732 | Positive = Resilient core. Negative = Fragile single-points-of-failure. |
| Cyclic Density | 2.9% | % of files trapped in dependency loops (Static Friction). |
| Avg Path Length | 2.6779 | Hops between files. Lower = Tighter coupling. |
| Articulation Pts | 8 | Number of single files that, if removed, shatter the network. |

## 4. COMPOSITION
| Lang | Files | LOC | Share |
|---|---|---|---|
| PYTHON | 62 | 5580 | 89.9% |
| MARKDOWN | 3 | 0 | 4.3% |
| PLAINTEXT | 1 | 0 | 1.4% |
| MAKEFILE | 1 | 148 | 1.4% |
| YAML | 1 | 41 | 1.4% |
| SHELL | 1 | 17 | 1.4% |

## 4.5 REPOSITORY ECOSYSTEM BASELINE (GLOBAL ARCHITECTURE)
> **Assigned Ecosystem Baseline:** `Cluster 3`
> **Architectural Drift Z-Score:** `2.272`
> **⚠️ UNIQUE INTERPRETATION:** This repository has a high Z-Score. While it maps closest to this archetype, its internal structure is a highly unique or hybrid interpretation of the pattern.

## 4.6 FILE ARCHETYPES & STATIC ASSETS
### Active Execution Logic (ML Clusters)
| Archetype | Count | Repo % |
|---|---|---|
| Unclassified | 65 | 94.2% |

### Inert Structural Mass (Static Categories)
| Category | Count | Repo % |
|---|---|---|
| Static: Literature & Documentation | 4 | 5.8% |

## 5. EXCLUDED ARTIFACTS (Unparsable or Shielded Files)
*Total Excluded Artifacts: 12*

**Composition by Extension & Reason:**
- `.ipynb`: 2x Excluded (Unsupported Extension: '.ipynb')
- `.yaml`: 1x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.json`: 1x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `no_extension`: 1x Unsupported Format (.undeterminable)
- `.rst`: 1x Excluded (Unsupported Extension: '.rst')
- `.bib`: 1x Excluded (Unsupported Extension: '.bib')
- `.png`: 1x Excluded (Explicitly Denied Extension: '.png')
- `.toml`: 1x Excluded (Unsupported Extension: '.toml')
- `.cfg`: 1x Excluded (Unsupported Extension: '.cfg')
- `.ini`: 1x Excluded (Unsupported Extension: '.ini')
- `.1`: 1x Excluded (Machine-Generated Source Code Signature: 244 LOC)

## 6. STRUCTURAL SURFACE PROFILE (formerly Risk Exposure) ANALYSIS (0-100%)
| Structural Surface Vector | Min | Max | Mean | Med | Mode |
|---|---|---|---|---|---|
| Complexity Load (formerly Cognitive Load Exposure) | 0.0 | 94.0 | 22.0 | 14.7 | 0.0 |
| Guard Balance (formerly Error & Exception Exposure) | 0.0 | 99.4 | 61.6 | 67.6 | 0.0 |
| Debt Markers (formerly Tech Debt Exposure) | 0.0 | 100.0 | 7.8 | 0.0 | 0.0 |
| Test Surface (formerly Testing Exposure) | 0.0 | 80.0 | 9.6 | 2.3 | 0.0 |
| Connectivity (formerly API Exposure) | 0.0 | 92.7 | 20.0 | 7.9 | 0.0 |
| Concurrency Surface (formerly Concurrency Exposure) | 0.0 | 100.0 | 13.3 | 0.0 | 0.0 |
| Mutation Surface (formerly State Flux Exposure) | 0.0 | 100.0 | 35.5 | 0.0 | 0.0 |
| Dead Code Surface (formerly Commented Logic Exposure) | 0.0 | 99.3 | 2.4 | 0.0 | 0.0 |
| Spec Alignment (formerly Specification Exposure) | 0.0 | 100.0 | 76.9 | 100.0 | 100.0 |
| Historical Stability (predictive layer, promotion pending #2987) (formerly Instability Exposure) | 50.0 | 50.0 | 50.0 | 50.0 | 50.0 |
| Historical Churn (predictive layer, promotion pending #2987) (formerly Volatility Exposure) | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |
| Doc Surface (formerly Documentation Exposure) | 0.0 | 100.0 | 28.1 | 11.1 | 0.0 |
| Credential Material (formerly Hardcoded Payload Artifacts) | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |

## 6b. SURFACE FAMILY PROFILE (Tier 1/2/3 -- gitgalaxy#2994)
> Percentile columns elsewhere in this brief that come from the Tier-2 snapshot percentiles are SNAPSHOT-RELATIVE: "87" means this file's value sits at the 87th percentile of THIS repo's files for that surface -- true by construction (Hazen average-rank), not a calibrated 0-100 risk threshold like the section 6 sigmoid scores above. An all-zero surface across the whole repo reads as 0.0 for every file, never a false-median 50.
| Family | Repo Total | Files w/ Signal | P90 File Value | Top File |
|---|---|---|---|---|
| memory | 150 | 28 | 4 | `tqdm-4.67.3/tests/tests_tqdm.py` |
| cleanup | 63 | 15 | 1 | `tqdm-4.67.3/tests/tests_tqdm.py` |
| guards | 730 | 41 | 20 | `tqdm-4.67.3/tests/tests_tqdm.py` |
| danger | 217 | 33 | 6 | `tqdm-4.67.3/tests/tests_tqdm.py` |
| concurrency | 122 | 20 | 5 | `tqdm-4.67.3/tests/tests_asyncio.py` |
| connectivity | 481 | 51 | 13 | `tqdm-4.67.3/tests/tests_tqdm.py` |
| io | 166 | 21 | 6 | `tqdm-4.67.3/tests/tests_main.py` |
| crypto | 0 | 0 | 0 | - |
| ipc | 25 | 8 | 1 | `tqdm-4.67.3/tests/tests_main.py` |
| time | 2 | 1 | 0 | `tqdm-4.67.3/tqdm/std.py` |
| serialization | 1 | 1 | 0 | `tqdm-4.67.3/Makefile` |
| regex | 15 | 10 | 1 | `tqdm-4.67.3/tests/tests_tqdm.py` |
| events | 56 | 9 | 1 | `tqdm-4.67.3/tests/tests_contrib_logging.py` |
| tests | 186 | 22 | 8 | `tqdm-4.67.3/tests/tests_tqdm.py` |
| docs | 338 | 51 | 8 | `tqdm-4.67.3/tests/tests_tqdm.py` |
| debt | 40 | 14 | 2 | `tqdm-4.67.3/tests/tests_tqdm.py` |
| mutation | 2773 | 59 | 80 | `tqdm-4.67.3/tests/tests_tqdm.py` |
| dead_code | 104 | 29 | 5 | `tqdm-4.67.3/tests/tests_contrib_logging.py` |
| credential | 0 | 0 | 0 | - |
| threat | 97 | 21 | 3 | `tqdm-4.67.3/tqdm/std.py` |
| ml_ai | 31 | 10 | 1 | `tqdm-4.67.3/tqdm/std.py` |
| ui | 2 | 1 | 0 | `tqdm-4.67.3/tqdm/rich.py` |

**Relations (repo medians):**
- `guard_balance_ratio` (guards / (danger + 1)): **0.6667**
- `alloc_cleanup_pairing` (cleanup / (memory + 1)): **0.0**

## 7. ARCHITECTURAL CHOKE POINTS & DEPENDENCIES
### Top I/O Latency Risks
- `tqdm-4.67.3/tests/tests_main.py` (Hits: 43)
- `tqdm-4.67.3/tests/tests_tqdm.py` (Hits: 29)
- `tqdm-4.67.3/tqdm/completion.sh` (Hits: 20)

### Top 5 Structural Pillars (Highest 'Imported By' / Blast Radius)
These are the most interconnected files relative to the rest of this repository. On a repo with dense internal coupling, that means core load-bearing infrastructure -- changes carry real cascading-break risk. On a repo with a flatter internal architecture, the gap between #1 and #5 may be small, and this list is a weaker signal accordingly; compare the connection counts below before treating it as a verdict.

1. **std.py** (`tqdm-4.67.3/tqdm/std.py`) — 21 inbound connections
2. **auto.py** (`tqdm-4.67.3/tqdm/auto.py`) — 16 inbound connections
3. **tests_tqdm.py** (`tqdm-4.67.3/tests/tests_tqdm.py`) — 14 inbound connections
4. **notebook.py** (`tqdm-4.67.3/tqdm/notebook.py`) — 7 inbound connections
5. **utils.py** (`tqdm-4.67.3/tqdm/utils.py`) — 6 inbound connections

### Top 5 Orchestrators (Highest 'Imports' / Fragility Index)
These files pull in the most external dependencies. They are highly coupled and fragile to API changes.

1. **std.py** (`tqdm-4.67.3/tqdm/std.py`) — 25 outbound dependencies
2. **utils.py** (`tqdm-4.67.3/tqdm/utils.py`) — 18 outbound dependencies
3. **tests_tqdm.py** (`tqdm-4.67.3/tests/tests_tqdm.py`) — 17 outbound dependencies
4. **notebook.py** (`tqdm-4.67.3/tqdm/notebook.py`) — 12 outbound dependencies
5. **cli.py** (`tqdm-4.67.3/tqdm/cli.py`) — 10 outbound dependencies

## 8. CORE FUNCTION HITLIST (Heaviest Functions)
> *Note: The 'Impact' metric below represents Structural Magnitude (complexity, arguments, and length), NOT operational risk. These are the load-bearing pillars of the logic.*

- `format_meter` (@ `tqdm-4.67.3/tqdm/std.py`) -> Impact: **289.9** | LOC: 197
- `__init__` (@ `tqdm-4.67.3/tqdm/std.py`) -> Impact: **228.3** | LOC: 150
- `main` (@ `tqdm-4.67.3/tqdm/cli.py`) -> Impact: **82.9** | LOC: 169
  * *Intent:* """ Parameters (internal use only) --------- fp : file-like object for tqdm argv : list (default: sys.argv[1:]) """
- `simple_progress` (@ `tqdm-4.67.3/tests/tests_perf.py`) -> Impact: **56.8** | LOC: 56
- `display` (@ `tqdm-4.67.3/tqdm/notebook.py`) -> Impact: **44.9** | LOC: 52
  * *Intent:* # additional signals close=False, bar_style=None, check_delay=True): # Note: contrary to native tqdm, msg='' does NOT clear bar # goal is to keep all ...
- `pandas` (@ `tqdm-4.67.3/tqdm/std.py`) -> Impact: **42.0** | LOC: 182
  * *Intent:* """ Registers the current `tqdm` class with pandas.core. ( frame.DataFrame | series.Series | groupby.(generic.)DataFrameGroupBy | groupby.(generic.)Se...
- `posix_pipe` (@ `tqdm-4.67.3/tqdm/cli.py`) -> Impact: **39.8** | LOC: 55
- `pos_line_diff` (@ `tqdm-4.67.3/tests/tests_tqdm.py`) -> Impact: **39.3** | LOC: 26
  * *Intent:* """ Return differences between two bar output lists. To be used with `RE_pos` """
- `inner` (@ `tqdm-4.67.3/tqdm/std.py`) -> Impact: **34.8** | LOC: 70
  * *Intent:* """ Parameters ---------- df : (DataFrame|Series)[GroupBy] Data (may be grouped). func : function To be applied on the (grouped) data. **kwargs : opti...
- `update` (@ `tqdm-4.67.3/tqdm/std.py`) -> Impact: **34.5** | LOC: 66
  * *Intent:* """ Manually update the progress bar, useful for streams such as reading files. E.g.: >>> t = tqdm(total=filesize) # Initialise >>> for current_buffer...

## 9. DIRECTORY GROUPS (Top 10 Heaviest Modules)
| Folder Path | Files | Total Impact | Avg Complexity Load | Avg Debt Markers |
|---|---|---|---|---|
| `tqdm-4.67.3/tqdm` | 23 | 3817.84 | 25.86% | 18.06% |
| `tqdm-4.67.3/tests` | 20 | 2328.78 | 8.6% | 0.0% |
| `tqdm-4.67.3/examples` | 12 | 385.54 | 29.01% | 0.0% |
| `tqdm-4.67.3` | 5 | 79.88 | 0.86% | 18.88% |
| `tqdm-4.67.3/tqdm/contrib` | 9 | 6.35 | 34.6% | 0.0% |

## 10. TARGETED STRUCTURAL SURFACE VECTORS (formerly Risk Vectors, Top 5 by Surface)
### Highest Debt Markers (formerly Tech Debt; Fragile/Planned)
- `tqdm-4.67.3/tqdm/dask.py` -> **99.9797%** Exposure
- `tqdm-4.67.3/tqdm/cli.py` -> **99.506%** Exposure
- `tqdm-4.67.3/Makefile` -> **94.3797%** Exposure
- `tqdm-4.67.3/tqdm/__init__.py` -> **81.7574%** Exposure
- `tqdm-4.67.3/tqdm/utils.py` -> **75.026%** Exposure
### Highest Mutation Surface (formerly State Flux; Mutation/Volatility)
- `tqdm-4.67.3/tqdm/_monitor.py` -> **100.0%** Exposure
- `tqdm-4.67.3/tqdm/asyncio.py` -> **100.0%** Exposure
- `tqdm-4.67.3/tqdm/cli.py` -> **100.0%** Exposure
- `tqdm-4.67.3/tqdm/contrib/concurrent.py` -> **100.0%** Exposure
- `tqdm-4.67.3/tqdm/contrib/discord.py` -> **100.0%** Exposure
### Highest Design Slop (Dead & Duplicated Logic)
- `tqdm-4.67.3/tests/tests_contrib_logging.py` -> **17** Orphaned Functions | **0** Duplicates
- `tqdm-4.67.3/tests/tests_pandas.py` -> **8** Orphaned Functions | **0** Duplicates
- `tqdm-4.67.3/tests/tests_asyncio.py` -> **7** Orphaned Functions | **0** Duplicates
- `tqdm-4.67.3/tests/tests_main.py` -> **7** Orphaned Functions | **0** Duplicates
- `tqdm-4.67.3/tests/tests_perf.py` -> **7** Orphaned Functions | **0** Duplicates

## 10.5 AI THREAT INTELLIGENCE (XGBoost)
*No files met the threshold for malicious structural signatures.*

## 10.6 WEAPONIZABLE SURFACE EXPOSURES (RULE-BASED SAST)
> Secondary Evidence: The following files tripped specific static threat signatures. Use these to explain *why* the XGBoost model flagged the files above.

*No critical vulnerabilities or security lens thresholds breached.*

## 10.7 ECOSYSTEM SECURITY AUDITS
> **AI CONTEXT:** High-level perimeter defense metrics from the X-Ray, Supply Chain Firewall, and API Network Mapper.

### ☢️ X-Ray & 🧱 Supply Chain Firewall
- **Binary Anomalies (X-Ray):** `1` (High entropy, packed payloads, or magic byte mismatches).
- **Blacklisted Dependencies:** `0` explicitly banned packages imported.
- **Unknown Dependencies:** `252` packages imported that bypass the Zero-Trust whitelist.

## 11. CUMULATIVE RISK HITLIST (Top 10 Highest Risk Files)
> Cumulative Risk is the sum of all individual risk exposures. These files represent the highest multi-dimensional technical debt and architectural fragility.

### 1. `tqdm-4.67.3/tqdm/cli.py` (PYTHON) -> Cumulative Risk: **726.16**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 358.72 | **LOC:** 325 | **CtrlFlow:** 31.7% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Tech Debt (99.506%), Safety Score (98.8972%)
- **Heaviest Functions:** `main` (Impact: 82.9), `posix_pipe` (Impact: 39.8), `cast` (Impact: 29.5)

### 2. `tqdm-4.67.3/tqdm/gui.py` (PYTHON) -> Cumulative Risk: **647.61**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 175.42 | **LOC:** 180 | **CtrlFlow:** 19.8% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Safety Score (99.3824%), Documentation (81.8182%)
- **Heaviest Functions:** `display` (Impact: 29.0), `__init__` (Impact: 21.0), `close` (Impact: 8.0)

### 3. `tqdm-4.67.3/tqdm/asyncio.py` (PYTHON) -> Cumulative Risk: **632.59**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 137.84 | **LOC:** 94 | **CtrlFlow:** 19.3% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Concurrency (100.0%), State Flux (100.0%), Spec Match (100.0%), Safety Score (98.1549%)
- **Heaviest Functions:** `__init__` (Impact: 11.8), `gather` (Impact: 11.1), `as_completed` (Impact: 8.5)

### 4. `tqdm-4.67.3/tqdm/std.py` (PYTHON) -> Cumulative Risk: **628.88**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 1778.6 | **LOC:** 1525 | **CtrlFlow:** 34.1% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Safety Score (98.2691%), Verification (80.0%)
- **Heaviest Functions:** `format_meter` (Impact: 289.9), `__init__` (Impact: 228.3), `pandas` (Impact: 42.0)

### 5. `tqdm-4.67.3/tqdm/notebook.py` (PYTHON) -> Cumulative Risk: **627.99**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 341.38 | **LOC:** 316 | **CtrlFlow:** 27.6% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Safety Score (98.8818%), Verification (80.0%)
- **Heaviest Functions:** `display` (Impact: 44.9), `__init__` (Impact: 32.2), `status_printer` (Impact: 20.0)

### 6. `tqdm-4.67.3/tqdm/keras.py` (PYTHON) -> Cumulative Risk: **622.87**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 170.3 | **LOC:** 123 | **CtrlFlow:** 24.4% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Safety Score (98.4742%), Documentation (81.8182%)
- **Heaviest Functions:** `on_epoch_begin` (Impact: 23.5), `__init__` (Impact: 18.7), `bar2callback` (Impact: 8.6)

### 7. `tqdm-4.67.3/tqdm/contrib/utils_worker.py` (PYTHON) -> Cumulative Risk: **593.34**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 0.52 | **LOC:** 39 | **CtrlFlow:** 16.0% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Concurrency (99.998%), Safety Score (90.5754%)
- **Heaviest Functions:** `submit` (Impact: 12.0), `__init__` (Impact: 1.6)

### 8. `tqdm-4.67.3/tqdm/_monitor.py` (PYTHON) -> Cumulative Risk: **591.01**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 62.98 | **LOC:** 96 | **CtrlFlow:** 18.5% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Documentation (100.0%), Safety Score (92.2805%)
- **Heaviest Functions:** `run` (Impact: 13.3), `get_instances` (Impact: 4.5), `exit` (Impact: 3.1)

### 9. `tqdm-4.67.3/tqdm/utils.py` (PYTHON) -> Cumulative Risk: **584.01**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 306.4 | **LOC:** 400 | **CtrlFlow:** 21.2% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), State Flux (99.9999%), Safety Score (86.5038%), Tech Debt (75.026%)
- **Heaviest Functions:** `envwrap` (Impact: 31.3), `wrap` (Impact: 13.9), `disp_trim` (Impact: 12.8)

### 10. `tqdm-4.67.3/tqdm/rich.py` (PYTHON) -> Cumulative Risk: **571.02**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 117.6 | **LOC:** 152 | **CtrlFlow:** 15.8% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Safety Score (94.6849%), Verification (80.0%)
- **Heaviest Functions:** `render` (Impact: 11.2), `__init__` (Impact: 10.0), `render` (Impact: 9.5)

## 12. SCANNED ARTIFACTS HITLIST (Top 25 Heaviest Files)
> *Note: 'Magnitude' represents the file's total Structural Magnitude and impact within the system. It is independent of its Risk Profile. High magnitude implies high structural importance and centralization.*

### `tqdm-4.67.3/tqdm/std.py` (PYTHON | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 1778.6 | **LOC:** 1525 | **CtrlFlow:** 34.1% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (52.2987%), Tech Debt (8.4748%)
**Top Internal Functions/Classes:**
  * `format_meter` (Impact: 289.9)
  * `__init__` (Impact: 228.3)
  * `pandas` (Impact: 42.0)
    * *Intent:* """ Registers the current `tqdm` class with pandas.core. ( frame.DataFrame | series.Series | groupby...
  * `inner` (Impact: 34.8)
    * *Intent:* """ Parameters ---------- df : (DataFrame|Series)[GroupBy] Data (may be grouped). func : function To...
  * `update` (Impact: 34.5)
    * *Intent:* """ Manually update the progress bar, useful for streams such as reading files. E.g.: >>> t = tqdm(t...
**Contextual Mitigations & Amplifications:**
* *Amplified Race Conditions:* 1 instances
* *Amplified Cascading Flux:* 203 instances
* *Concurrency (weighted view):* 7
* *State Mutation (weighted view):* 669
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 283`, `structural_boundaries: 204`, `args: 70`, `func_start: 61`, `class_start: 10`
* *Risk/State:* `safety_bypasses: 15`, `state_mutation: 263`, `dead_code: 4`, `planned_debt: 1`
* *Architecture:* `io: 14`, `api: 59`, `concurrency: 2`, `import: 29`
* *Defense:* `safety: 69`, `doc: 39`, `sync_locks: 4`, `cleanup: 4`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 236.361
  * `Choke Point (Betweenness):` 0.031387 | `Ripple Effect (Closeness):` 0.472222
  * `Imports (Out-Degree: 3):` ._monitor, .utils, collections, contextlib, datetime, multiprocessing, numbers, numpy...
  * `Imported By (In-Degree: 21):` (Excluded from Brief to save tokens)

### `tqdm-4.67.3/tests/tests_tqdm.py` (PYTHON | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 1090.44 | **LOC:** 1988 | **CtrlFlow:** 10.4% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (22.4779%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `pos_line_diff` (Impact: 39.3)
    * *Intent:* """ Return differences between two bar output lists. To be used with `RE_pos` """
  * `test_max_interval` (Impact: 19.4)
    * *Intent:* """Test maxinterval"""
  * `test_smoothing` (Impact: 15.7)
    * *Intent:* """Test exponential weighted average smoothing"""
  * `test_position` (Impact: 15.7)
    * *Intent:* """Test positioned progress bars"""
  * `squash_ctrlchars` (Impact: 14.0)
    * *Intent:* """Apply control characters in a string just like a terminal display"""
**Contextual Mitigations & Amplifications:**
* *Amplified Race Conditions:* 6 instances
* *Amplified Cascading Flux:* 112 instances
* *Concurrency (weighted view):* 36
* *State Mutation (weighted view):* 544
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 149`, `structural_boundaries: 814`, `args: 100`, `func_start: 99`, `class_start: 5`
* *Risk/State:* `safety_bypasses: 43`, `state_mutation: 320`, `dead_code: 1`, `planned_debt: 3`
* *Architecture:* `io: 29`, `api: 100`, `concurrency: 6`, `import: 23`
* *Defense:* `safety: 295`, `doc: 86`, `test: 78`, `sync_locks: 5`, `cleanup: 41`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 48.49
  * `Choke Point (Betweenness):` 0.011194 | `Ripple Effect (Closeness):` 0.205882
  * `Imports (Out-Degree: 1):` StringIO, colorama, contextlib, csv, datetime, functools, io, multiprocessing...
  * `Imported By (In-Degree: 14):` (Excluded from Brief to save tokens)

### `tqdm-4.67.3/tqdm/cli.py` (PYTHON | Tier 1.5 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 358.72 | **LOC:** 325 | **CtrlFlow:** 31.7% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (67.0281%), Tech Debt (99.506%)
**Top Internal Functions/Classes:**
  * `main` (Impact: 82.9)
    * *Intent:* """ Parameters (internal use only) --------- fp : file-like object for tqdm argv : list (default: sy...
  * `posix_pipe` (Impact: 39.8)
  * `cast` (Impact: 29.5)
  * `cp` (Impact: 2.0)
    * *Intent:* """copy resource `name` to `dst`"""
  * `write` (Impact: 1.6)
**Contextual Mitigations & Amplifications:**
* *Mitigated Danger:* 3 instances
* *Amplified Rce:* 3 instances
* *Amplified Cascading Flux:* 57 instances
* *High Risk Execution (weighted view):* 1
* *Sec Tainted Injection (weighted view):* 3
* *State Mutation (weighted view):* 178
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 70`, `structural_boundaries: 56`, `args: 12`, `func_start: 10`, `class_start: 2`
* *Risk/State:* `safety_bypasses: 6`, `high_risk_execution: 4`, `state_mutation: 64`, `dead_code: 1`, `planned_debt: 2`, `duplicate_logic: 4`
* *Architecture:* `io: 14`, `api: 13`, `import: 10`
* *Defense:* `safety: 13`, `doc: 7`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 13.594
  * `Choke Point (Betweenness):` 0.002414 | `Ripple Effect (Closeness):` 0.058824
  * `Imports (Out-Degree: 3):` .std, .version, ast, importlib, importlib_resources, logging, pathlib, re...
  * `Imported By (In-Degree: 4):` (Excluded from Brief to save tokens)

### `tqdm-4.67.3/tests/tests_perf.py` (PYTHON | Tier 1.5 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 355.32 | **LOC:** 316 | **CtrlFlow:** 18.1% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (21.0773%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `simple_progress` (Impact: 56.8)
  * `update_and_print` (Impact: 19.9)
  * `retry_on_except` (Impact: 9.6)
    * *Intent:* """decroator for retrying `n` times before raising Exceptions"""
  * `test_inner` (Impact: 9.3)
    * *Intent:* """may skip if `check_cpu_time` fails"""
  * `wrapper` (Impact: 7.9)
    * *Intent:* """actual decorator"""
**Contextual Mitigations & Amplifications:**
* *Amplified Race Conditions:* 3 instances
* *Amplified Cascading Flux:* 43 instances
* *Concurrency (weighted view):* 18
* *State Mutation (weighted view):* 143
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 41`, `structural_boundaries: 98`, `args: 23`, `func_start: 22`
* *Risk/State:* `safety_bypasses: 11`, `state_mutation: 57`, `unreferenced_by_name: 7`
* *Architecture:* `io: 9`, `api: 22`, `concurrency: 3`, `import: 8`
* *Defense:* `safety: 8`, `doc: 15`, `test: 8`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.014
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 1):` .tests_tqdm, contextlib, functools, sys, time, tqdm
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/tqdm/notebook.py` (PYTHON | Tier 1.5 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 341.38 | **LOC:** 316 | **CtrlFlow:** 27.6% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (53.0712%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `display` (Impact: 44.9)
    * *Intent:* # additional signals close=False, bar_style=None, check_delay=True): # Note: contrary to native tqdm...
  * `__init__` (Impact: 32.2)
    * *Intent:* """ Supports the usual `tqdm.tqdm` parameters as well as those listed below. Parameters ---------- d...
  * `status_printer` (Impact: 20.0)
    * *Intent:* """ Manage the printing of an IPython/Jupyter Notebook progress bar widget. """
  * `close` (Impact: 10.5)
    * *Intent:* # NB: don't `finally: close()` # since this could be a shared bar which the user will `reset()`
  * `reset` (Impact: 9.6)
    * *Intent:* """ Resets to 0 iterations for repeated use. Consider combining with `leave=True`. Parameters ------...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 56 instances
* *State Mutation (weighted view):* 179
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 55`, `structural_boundaries: 71`, `args: 15`, `func_start: 14`, `class_start: 2`
* *Risk/State:* `safety_bypasses: 6`, `state_mutation: 67`, `dead_code: 4`
* *Architecture:* `io: 3`, `api: 15`, `import: 18`
* *Defense:* `safety: 18`, `doc: 7`, `cleanup: 2`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 27.875
  * `Choke Point (Betweenness):` 0.001756 | `Ripple Effect (Closeness):` 0.150675
  * `Imports (Out-Degree: 1):` .std, IPython, IPython.display, IPython.html.widgets, compatibility, html, ipywidgets, re...
  * `Imported By (In-Degree: 7):` (Excluded from Brief to save tokens)

### `tqdm-4.67.3/tqdm/utils.py` (PYTHON | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 306.4 | **LOC:** 400 | **CtrlFlow:** 21.2% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (48.6052%), Tech Debt (75.026%)
**Top Internal Functions/Classes:**
  * `envwrap` (Impact: 31.3)
    * *Intent:* """ Override parameter defaults via `os.environ[prefix + param_name]`. Maps UPPER_CASE env vars map ...
  * `wrap` (Impact: 13.9)
  * `disp_trim` (Impact: 12.8)
    * *Intent:* """ Trim a string which may contain ANSI control characters. """
  * `__init__` (Impact: 10.1)
    * *Intent:* """ Wrap a given `file`-like object's `read()` or `write()` to report lengths to the given `callback...
  * `_screen_shape_windows` (Impact: 6.8)
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 31 instances
* *State Mutation (weighted view):* 101
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 53`, `structural_boundaries: 130`, `args: 38`, `func_start: 38`, `class_start: 6`
* *Risk/State:* `safety_bypasses: 14`, `state_mutation: 39`, `planned_debt: 1`, `duplicate_logic: 2`
* *Architecture:* `io: 2`, `api: 27`, `import: 17`
* *Defense:* `safety: 30`, `doc: 17`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 81.687
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.322725
  * `Imports (Out-Degree: 0):` array, colorama, ctypes, fcntl, foo, functools, inspect, os...
  * `Imported By (In-Degree: 6):` (Excluded from Brief to save tokens)

### `tqdm-4.67.3/tests/tests_asyncio.py` (PYTHON | Tier 1.5 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 199.3 | **LOC:** 134 | **CtrlFlow:** 21.0% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (25.0%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `test_as_completed` (Impact: 9.4)
    * *Intent:* """Test asyncio as_completed"""
  * `test_generators` (Impact: 8.0)
    * *Intent:* """Test asyncio generators"""
  * `count` (Impact: 7.3)
  * `test_coroutines` (Impact: 4.5)
    * *Intent:* """Test asyncio coroutine.send"""
  * `acount` (Impact: 3.6)
**Contextual Mitigations & Amplifications:**
* *Amplified Race Conditions:* 16 instances
* *Amplified Cascading Flux:* 9 instances
* *Concurrency (weighted view):* 112
* *State Mutation (weighted view):* 31
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 21`, `structural_boundaries: 56`, `args: 10`, `func_start: 10`
* *Risk/State:* `safety_bypasses: 3`, `state_mutation: 13`, `unreferenced_by_name: 7`
* *Architecture:* `api: 10`, `concurrency: 32`, `import: 6`
* *Defense:* `safety: 16`, `doc: 8`, `test: 7`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.014
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 2):` .tests_tqdm, asyncio, functools, sys, time, tqdm.asyncio
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/tqdm/gui.py` (PYTHON | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 175.42 | **LOC:** 180 | **CtrlFlow:** 19.8% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (54.3636%), Tech Debt (15.7951%)
**Top Internal Functions/Classes:**
  * `display` (Impact: 29.0)
  * `__init__` (Impact: 21.0)
    * *Intent:* # TODO: @classmethod: write() on GUI?
  * `close` (Impact: 8.0)
  * `clear` (Impact: 2.1)
  * `tgrange` (Impact: 1.9)
    * *Intent:* """Shortcut for `tqdm.gui.tqdm(range(*args), **kwargs)`."""
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 27 instances
* *State Mutation (weighted view):* 104
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 24`, `structural_boundaries: 25`, `args: 5`, `func_start: 5`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 4`, `state_mutation: 50`, `dead_code: 2`, `planned_debt: 1`
* *Architecture:* `api: 7`, `import: 7`
* *Defense:* `doc: 3`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 76.147
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.298828
  * `Imports (Out-Degree: 1):` .std, collections, compatibility, matplotlib, matplotlib.pyplot, re, tqdm.gui, warnings
  * `Imported By (In-Degree: 4):` (Excluded from Brief to save tokens)

### `tqdm-4.67.3/tqdm/keras.py` (PYTHON | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 170.3 | **LOC:** 123 | **CtrlFlow:** 24.4% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (60.6529%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `on_epoch_begin` (Impact: 23.5)
  * `__init__` (Impact: 18.7)
  * `bar2callback` (Impact: 8.6)
  * `callback` (Impact: 7.3)
  * `on_train_begin` (Impact: 6.2)
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 26 instances
* *State Mutation (weighted view):* 80
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 22`, `structural_boundaries: 29`, `args: 12`, `func_start: 10`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 28`
* *Architecture:* `api: 12`, `import: 6`
* *Defense:* `safety: 5`, `doc: 3`, `cleanup: 3`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 7.146
  * `Choke Point (Betweenness):` 0.000878 | `Ripple Effect (Closeness):` 0.014706
  * `Imports (Out-Degree: 2):` .auto, .notebook, copy, functools, keras, tensorflow
  * `Imported By (In-Degree: 1):` (Excluded from Brief to save tokens)

### `tqdm-4.67.3/tqdm/tk.py` (PYTHON | Tier 1.5 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 169.42 | **LOC:** 197 | **CtrlFlow:** 23.1% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (37.4276%), Tech Debt (15.7951%)
**Top Internal Functions/Classes:**
  * `__init__` (Impact: 23.4)
    * *Intent:* # TODO: @classmethod: write()? """ This class accepts the following parameters *in addition* to the ...
  * `close` (Impact: 11.1)
  * `display` (Impact: 8.6)
  * `set_description_str` (Impact: 8.3)
  * `reset` (Impact: 7.6)
    * *Intent:* """ Resets to 0 iterations for repeated use. Parameters ---------- total : int or float, optional. T...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 22 instances
* *State Mutation (weighted view):* 81
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 28`, `structural_boundaries: 31`, `args: 12`, `func_start: 11`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 37`, `dead_code: 1`, `planned_debt: 1`
* *Architecture:* `io: 1`, `api: 11`, `import: 7`
* *Defense:* `safety: 3`, `doc: 7`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.014
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 1):` .std, re, sys, tkinter, tkinter.ttk, tqdm.tk, warnings
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/tests/tests_synchronisation.py` (PYTHON | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 148.38 | **LOC:** 208 | **CtrlFlow:** 6.7% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (23.9269%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `inner` (Impact: 6.2)
    * *Intent:* """restores TMonitor on completion regardless of Exceptions"""
  * `test_monitoring_and_cleanup` (Impact: 6.0)
    * *Intent:* """Test for stalled tqdm instance and monitor deletion"""
  * `patch_sleep` (Impact: 5.5)
    * *Intent:* """Temporarily makes TMonitor use Time.fake_sleep"""
  * `test_monitoring_multi` (Impact: 4.6)
    * *Intent:* """Test on multiple bars, one not needing miniters adjustment"""
  * `wait` (Impact: 3.7)
    * *Intent:* """uses Time.fake_sleep"""
**Contextual Mitigations & Amplifications:**
* *Amplified Race Conditions:* 4 instances
* *Amplified Cascading Flux:* 13 instances
* *Concurrency (weighted view):* 25
* *State Mutation (weighted view):* 59
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 9`, `structural_boundaries: 72`, `args: 15`, `func_start: 15`, `class_start: 3`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 33`, `planned_debt: 2`, `unreferenced_by_name: 7`
* *Architecture:* `api: 18`, `concurrency: 5`, `import: 6`
* *Defense:* `safety: 20`, `doc: 15`, `test: 5`, `sync_locks: 4`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.014
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 1):` .tests_tqdm, functools, multiprocessing, threading, time, tqdm
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/tqdm/asyncio.py` (PYTHON | Tier 1.5 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 137.84 | **LOC:** 94 | **CtrlFlow:** 19.3% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (49.9911%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `__init__` (Impact: 11.8)
  * `gather` (Impact: 11.1)
    * *Intent:* """ Wrapper for `asyncio.gather`. """
  * `as_completed` (Impact: 8.5)
    * *Intent:* """ Wrapper for `asyncio.as_completed`. """
  * `__anext__` (Impact: 4.9)
  * `send` (Impact: 2.1)
**Contextual Mitigations & Amplifications:**
* *Amplified Race Conditions:* 5 instances
* *Amplified Cascading Flux:* 16 instances
* *Concurrency (weighted view):* 34
* *State Mutation (weighted view):* 50
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 11`, `structural_boundaries: 25`, `args: 8`, `func_start: 8`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 2`, `state_mutation: 18`
* *Architecture:* `api: 9`, `concurrency: 9`, `import: 3`
* *Defense:* `safety: 4`, `doc: 5`, `cleanup: 2`
* *Network Topology:*
  * `Ecosystem Role:` Transceiver (Middle-Tier) | `Dependency Blast Radius (PageRank):` 28.914
  * `Choke Point (Betweenness):` 0.000878 | `Ripple Effect (Closeness):` 0.161765
  * `Imports (Out-Degree: 1):` .std, asyncio, sys, tqdm.asyncio
  * `Imported By (In-Degree: 3):` (Excluded from Brief to save tokens)

### `tqdm-4.67.3/tests/tests_main.py` (PYTHON | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 127.98 | **LOC:** 245 | **CtrlFlow:** 10.9% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (14.2837%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `test_main` (Impact: 11.6)
    * *Intent:* """Test misc CLI options"""
  * `test_exceptions` (Impact: 11.4)
    * *Intent:* """Test CLI Exceptions"""
  * `test_main_log` (Impact: 7.9)
    * *Intent:* """Test CLI --log"""
  * `norm` (Impact: 4.4)
    * *Intent:* """Normalise line endings."""
  * `test_comppath` (Impact: 3.5)
    * *Intent:* """Test CLI --comppath"""
**Contextual Mitigations & Amplifications:**
* *Mitigated Danger:* 2 instances
* *Amplified Rce:* 2 instances
* *Amplified Cascading Flux:* 17 instances
* *High Risk Execution (weighted view):* 0
* *Sec Tainted Injection (weighted view):* 2
* *State Mutation (weighted view):* 62
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 19`, `structural_boundaries: 85`, `args: 11`, `func_start: 11`
* *Risk/State:* `high_risk_execution: 2`, `state_mutation: 28`, `planned_debt: 1`, `unreferenced_by_name: 7`
* *Architecture:* `io: 43`, `api: 11`, `import: 9`
* *Defense:* `safety: 45`, `doc: 12`, `test: 8`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.014
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 5):` .tests_tqdm, functools, logging, os, subprocess, sys, tqdm.__main__, tqdm.cli...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/tests/tests_pandas.py` (PYTHON | Tier 1.5 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 119.2 | **LOC:** 224 | **CtrlFlow:** 8.7% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (14.6654%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `test_pandas_groupby_apply` (Impact: 7.5)
    * *Intent:* """Test pandas.DataFrame.groupby(...).progress_apply"""
  * `test_pandas_data_frame` (Impact: 7.0)
    * *Intent:* """Test pandas.DataFrame.progress_apply and .progress_applymap"""
  * `test_pandas_rolling_expanding` (Impact: 4.0)
    * *Intent:* """Test pandas.(Series|DataFrame).(rolling|expanding)"""
  * `test_pandas_series` (Impact: 4.0)
    * *Intent:* """Test pandas.Series.progress_apply and .progress_map"""
  * `test_pandas_apply_args_deprecation` (Impact: 2.9)
    * *Intent:* """Test warning info in `pandas.Dataframe(Series).progress_apply(func, *args)`"""
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 15 instances
* *State Mutation (weighted view):* 74
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 14`, `structural_boundaries: 59`, `args: 28`, `func_start: 9`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 44`, `unreferenced_by_name: 8`
* *Architecture:* `api: 9`, `import: 4`
* *Defense:* `safety: 24`, `doc: 8`, `test: 8`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.014
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 1):` .tests_tqdm, tqdm
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/tqdm/rich.py` (PYTHON | Tier 1.5 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 117.6 | **LOC:** 152 | **CtrlFlow:** 15.8% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (32.6424%), Tech Debt (19.0407%)
**Top Internal Functions/Classes:**
  * `render` (Impact: 11.2)
    * *Intent:* """Show data transfer speed."""
  * `__init__` (Impact: 10.0)
    * *Intent:* # TODO: @classmethod: write()? """ This class accepts the following parameters *in addition* to the ...
  * `render` (Impact: 9.5)
    * *Intent:* """Calculate common unit for completed and total."""
  * `display` (Impact: 4.2)
  * `reset` (Impact: 4.0)
    * *Intent:* """ Resets to 0 iterations for repeated use. Parameters ---------- total : int or float, optional. T...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 14 instances
* *State Mutation (weighted view):* 54
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 15`, `structural_boundaries: 30`, `args: 10`, `func_start: 10`, `class_start: 3`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 26`, `planned_debt: 1`
* *Architecture:* `api: 11`, `import: 4`
* *Defense:* `safety: 2`, `doc: 9`, `cleanup: 2`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.014
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 1):` .std, rich.progress, tqdm.rich, warnings
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/tests/tests_contrib_logging.py` (PYTHON | Tier 1.5 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 105.94 | **LOC:** 172 | **CtrlFlow:** 0.0% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (0.0%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `write` (Impact: 2.1)
  * `write` (Impact: 2.1)
  * `test_should_not_swallow_certain_exceptions` (Impact: 2.1)
  * `test_should_format_message` (Impact: 2.0)
  * `test_should_call_handle_error_if_exception_was_thrown` (Impact: 1.9)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `structural_boundaries: 84`, `args: 19`, `func_start: 19`, `class_start: 6`
* *Risk/State:* `safety_bypasses: 5`, `state_mutation: 44`, `unreferenced_by_name: 17`
* *Architecture:* `io: 6`, `api: 25`, `import: 10`
* *Defense:* `safety: 33`, `test: 24`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.014
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 2):` .tests_tqdm, io, logging, logging.handlers, pytest, sys, tqdm, tqdm.contrib.logging
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/examples/7zx.py` (PYTHON | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 94.3 | **LOC:** 118 | **CtrlFlow:** 26.3% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (68.7606%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `main` (Impact: 24.7)
**Contextual Mitigations & Amplifications:**
* *Mitigated Danger:* 1 instances
* *Amplified Rce:* 1 instances
* *Amplified Cascading Flux:* 21 instances
* *High Risk Execution (weighted view):* 0
* *Sec Tainted Injection (weighted view):* 1
* *State Mutation (weighted view):* 67
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 21`, `structural_boundaries: 18`, `args: 1`, `func_start: 1`
* *Risk/State:* `safety_bypasses: 1`, `high_risk_execution: 1`, `state_mutation: 25`
* *Architecture:* `io: 2`, `api: 1`, `import: 7`
* *Defense:* `safety: 3`, `doc: 1`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.014
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 1):` argopt, logging, os, pty, re, subprocess, tqdm
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/tqdm/_monitor.py` (PYTHON | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 62.98 | **LOC:** 96 | **CtrlFlow:** 18.5% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (55.9336%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `run` (Impact: 13.3)
  * `get_instances` (Impact: 4.5)
    * *Intent:* # returns a copy of started `tqdm_cls` instances return [i for i in self.tqdm_cls._instances.copy() ...
  * `exit` (Impact: 3.1)
  * `__init__` (Impact: 2.5)
  * `report` (Impact: 1.5)
**Contextual Mitigations & Amplifications:**
* *Amplified Race Conditions:* 1 instances
* *Amplified Cascading Flux:* 5 instances
* *Concurrency (weighted view):* 6
* *State Mutation (weighted view):* 23
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 10`, `structural_boundaries: 23`, `args: 5`, `func_start: 5`, `class_start: 2`
* *Risk/State:* `safety_bypasses: 2`, `state_mutation: 13`
* *Architecture:* `api: 8`, `concurrency: 1`, `import: 4`
* *Defense:* `safety: 1`, `doc: 2`, `sync_locks: 3`
* *Network Topology:*
  * `Ecosystem Role:` Pure Producer (Foundation) | `Dependency Blast Radius (PageRank):` 72.595
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.301248
  * `Imports (Out-Degree: 0):` atexit, threading, time, warnings
  * `Imported By (In-Degree: 2):` (Excluded from Brief to save tokens)

### `tqdm-4.67.3/examples/async_coroutines.py` (PYTHON | Tier 1.5 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 58.64 | **LOC:** 37 | **CtrlFlow:** 40.7% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (79.8823%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `main` (Impact: 8.8)
  * `count` (Impact: 7.3)
**Contextual Mitigations & Amplifications:**
* *Amplified Race Conditions:* 4 instances
* *Amplified Cascading Flux:* 4 instances
* *Concurrency (weighted view):* 28
* *State Mutation (weighted view):* 12
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 11`, `structural_boundaries: 11`, `args: 2`, `func_start: 2`
* *Risk/State:* `state_mutation: 4`
* *Architecture:* `api: 2`, `concurrency: 8`, `import: 2`
* *Defense:* `safety: 1`, `doc: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.014
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 1):` asyncio, tqdm.asyncio
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/Makefile` (MAKEFILE | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 54.66 | **LOC:** 189 | **CtrlFlow:** 1.4% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (4.3208%), Tech Debt (94.3797%)
**Top Internal Functions/Classes:**
  * `submodules` (Impact: 2.2)
  * `Dockerfile` (Impact: 2.1)
  * `tqdm/tqdm.1` (Impact: 1.4)
  * `coverclean` (Impact: 1.4)
  * `clean` (Impact: 1.4)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 2`, `structural_boundaries: 1`, `func_start: 37`
* *Risk/State:* `planned_debt: 1`, `unreferenced_by_name: 4`
* *Architecture:* `io: 1`, `api: 7`
* *Defense:* `test: 8`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 5.014
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` None
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/examples/tqdm_wget.py` (PYTHON | Tier 1.5 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 50.06 | **LOC:** 111 | **CtrlFlow:** 9.1% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (32.7377%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `update_to` (Impact: 5.1)
    * *Intent:* """ b : int, optional Number of blocks transferred so far [default: 1]. bsize : int, optional Size o...
  * `update_to` (Impact: 4.8)
    * *Intent:* """ b : int, optional Number of blocks transferred so far [default: 1]. bsize : int, optional Size o...
  * `my_hook` (Impact: 4.5)
    * *Intent:* """Wraps tqdm instance. Don't forget to close() or __exit__() the tqdm instance once you're done wit...
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 9 instances
* *State Mutation (weighted view):* 31
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 3`, `structural_boundaries: 20`, `args: 3`, `func_start: 3`, `class_start: 1`
* *Risk/State:* `state_mutation: 13`, `unreferenced_by_name: 1`
* *Architecture:* `io: 1`, `api: 4`, `import: 4`
* *Defense:* `doc: 5`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.014
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 1):` docopt, os, tqdm.auto, urllib
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/examples/parallel_bars.py` (PYTHON | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 48.1 | **LOC:** 54 | **CtrlFlow:** 25.0% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (94.0476%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `progresser` (Impact: 20.3)
**Contextual Mitigations & Amplifications:**
* *Amplified Race Conditions:* 1 instances
* *Amplified Cascading Flux:* 5 instances
* *Concurrency (weighted view):* 10
* *State Mutation (weighted view):* 16
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 10`, `structural_boundaries: 21`, `args: 1`, `func_start: 1`
* *Risk/State:* `state_mutation: 6`, `dead_code: 1`
* *Architecture:* `api: 1`, `concurrency: 5`, `import: 8`
* *Defense:* `sync_locks: 3`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.014
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 2):` concurrent.futures, functools, multiprocessing, random, threading, time, tqdm.auto, tqdm.contrib.concurrent
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/tests/tests_contrib.py` (PYTHON | Tier 1.5 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 40.22 | **LOC:** 62 | **CtrlFlow:** 4.9% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (13.4979%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `test_zip` (Impact: 3.2)
    * *Intent:* """Test contrib.tzip"""
  * `test_map` (Impact: 3.2)
    * *Intent:* """Test contrib.tmap"""
  * `test_enumerate` (Impact: 2.1)
    * *Intent:* """Test contrib.tenumerate"""
  * `incr` (Impact: 1.6)
    * *Intent:* """Dummy function"""
  * `test_enumerate_numpy` (Impact: 1.3)
    * *Intent:* """Test contrib.tenumerate(numpy.ndarray)"""
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 6 instances
* *State Mutation (weighted view):* 23
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 2`, `structural_boundaries: 34`, `args: 6`, `func_start: 5`
* *Risk/State:* `state_mutation: 11`, `unreferenced_by_name: 5`
* *Architecture:* `api: 5`, `import: 4`
* *Defense:* `safety: 9`, `doc: 6`, `test: 8`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.014
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 1):` .tests_tqdm, pytest, tqdm, tqdm.contrib
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/examples/coroutine_pipe.py` (PYTHON | Tier 1.5 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 38.62 | **LOC:** 70 | **CtrlFlow:** 16.7% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (23.5045%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `grep` (Impact: 5.4)
  * `tqdm_pipe` (Impact: 4.6)
    * *Intent:* """ Coroutine chain pipe `send()`ing to `target`. This: >>> r = receiver() >>> p = producer(r) >>> n...
  * `source` (Impact: 3.0)
  * `sink` (Impact: 2.2)
  * `inner` (Impact: 1.9)
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 4 instances
* *State Mutation (weighted view):* 13
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 6`, `structural_boundaries: 14`, `args: 6`, `func_start: 6`
* *Risk/State:* `state_mutation: 5`
* *Architecture:* `api: 6`, `import: 2`
* *Defense:* `doc: 2`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.014
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 1):` functools, tqdm.auto
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tqdm-4.67.3/tqdm/dask.py` (PYTHON | Tier 1.5 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Local Micro-Species:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 35.7 | **LOC:** 45 | **CtrlFlow:** 12.0% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (25.4999%), Tech Debt (99.9797%)
**Top Internal Functions/Classes:**
  * `__init__` (Impact: 5.6)
  * `_start_state` (Impact: 4.2)
  * `display` (Impact: 3.2)
    * *Intent:* """Displays in the current cell in Notebooks."""
  * `_posttask` (Impact: 2.1)
  * `_finish` (Impact: 2.1)
**Contextual Mitigations & Amplifications:**
* *Amplified Cascading Flux:* 4 instances
* *State Mutation (weighted view):* 15
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 3`, `structural_boundaries: 16`, `args: 5`, `func_start: 5`, `class_start: 1`
* *Risk/State:* `state_mutation: 7`, `unreferenced_by_name: 5`
* *Architecture:* `api: 3`, `import: 4`
* *Defense:* `doc: 3`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 5.014
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 2):` .auto, .notebook, dask.callbacks, functools
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

## 13. ARCHITECTURAL DRIFT ANOMALIES & ANTI-PATTERNS
> **AI CONTEXT:** Pay close attention to 'Anti-Pattern' files. These files blend in globally (Low Global Drift), but heavily violate the standard conventions of their native programming language (High Local Drift). 'Mixed-Responsibility' files sit perfectly between two global archetypes (Delta <= 0.9 IQR), indicating a violation of the Single Responsibility Principle.

*No highly conflicted/drifting files detected within the 0.9 IQR threshold.*

## 13.5 STRATEGIC REFACTORING TARGETS (Volatility & Authorship Centralization)
> **AI CONTEXT:** Use these intersections to recommend pragmatic next steps. Risk is exponentially worse when combined with high churn (frequent edits) or high authorship centralization (single points of failure).

## 13.8 SYSTEMIC NETWORK BOTTLENECKS (N-Dimensional Topology)
> **AI CONTEXT:** These metrics cross-multiply Network Graph Theory against Risk Exposure to identify the exact mechanisms of runtime failure.

### ☣️ Cascading State Flux (Betweenness * State Flux)
These files act as structural bridges between components, but possess highly volatile, mutating state. They cause unpredictable side-effects for all downstream consumers.

- `tqdm-4.67.3/tqdm/std.py` -> **Severity: 3.139** (Bridge: 0.0314 * Flux: 100.0%)
- `tqdm-4.67.3/tqdm/auto.py` -> **Severity: 1.831** (Bridge: 0.02 * Flux: 91.6827%)
- `tqdm-4.67.3/tqdm/autonotebook.py` -> **Severity: 0.257** (Bridge: 0.0037 * Flux: 68.9974%)
- `tqdm-4.67.3/tqdm/cli.py` -> **Severity: 0.241** (Bridge: 0.0024 * Flux: 100.0%)
- `tqdm-4.67.3/tqdm/contrib/concurrent.py` -> **Severity: 0.176** (Bridge: 0.0018 * Flux: 100.0%)

### 🃏 House of Cards (Closeness * Error Risk)
These files are deeply embedded (1 or 2 hops from the entire codebase) but possess high error exposure. A runtime exception here will cascade instantly across the application.

- `tqdm-4.67.3/tqdm/std.py` -> **Severity: 46.405** (Embedded: 0.4722 * Error Risk: 98.2691%)
- `tqdm-4.67.3/tqdm/gui.py` -> **Severity: 29.698** (Embedded: 0.2988 * Error Risk: 99.3824%)
- `tqdm-4.67.3/tqdm/utils.py` -> **Severity: 27.917** (Embedded: 0.3227 * Error Risk: 86.5038%)
- `tqdm-4.67.3/tqdm/_monitor.py` -> **Severity: 27.799** (Embedded: 0.3012 * Error Risk: 92.2805%)
- `tqdm-4.67.3/tqdm/auto.py` -> **Severity: 18.014** (Embedded: 0.2413 * Error Risk: 74.6494%)

### 🙈 Opaque Critical Nodes (Dependency Blast Radius * Doc Risk)
These are 'Core Architecture Nodes' that the entire ecosystem relies upon, but they lack human intent, documentation, or ownership metadata. Modifying them is flying blind.

- `tqdm-4.67.3/tqdm/std.py` -> **Severity: 11559.258** (Blast Radius: 236.361 * Doc Risk: 48.9051%)
- `tqdm-4.67.3/tqdm/_monitor.py` -> **Severity: 7259.5** (Blast Radius: 72.595 * Doc Risk: 100.0%)
- `tqdm-4.67.3/tqdm/gui.py` -> **Severity: 6230.21** (Blast Radius: 76.147 * Doc Risk: 81.8182%)
- `tqdm-4.67.3/tqdm/utils.py` -> **Severity: 5292.395** (Blast Radius: 81.687 * Doc Risk: 64.7887%)
- `tqdm-4.67.3/tqdm/notebook.py` -> **Severity: 1991.072** (Blast Radius: 27.875 * Doc Risk: 71.4286%)

## AI SYSTEM INSTRUCTIONS (OUTPUT FORMAT)
> **CRITICAL TONE DIRECTIVE:** Stay in the Senior Technical Storyteller persona from Section 1. Use grounded, professional software engineering terminology (e.g., coupling, cohesion, technical debt, single responsibility) woven into a cohesive narrative -- not a dry, disconnected bullet-point audit. DO NOT use sci-fi, dramatic, or sensational jargon (e.g., 'Trojan', 'violently violates', 'parasitic', 'chimeric'). Be objective and factual, but write like you're explaining the codebase to a colleague, not filing a verdict.
> **When the user asks for an architectural review, structure your response using these directives:**
> 1. **Information Flow & Purpose (The Executive Summary):** Synthesize the overarching purpose of the codebase. Trace the information flow by analyzing the Top Dependencies ('Imports' and 'Imported By') and the Language Composition. Explain how the system's archetype drives its design, but only mention Z-Score deviations if they are highly abnormal.
> 2. **Notable Structures & Architecture:** Discuss the architecture based on the Dependency Graph. Identify the foundational load-bearers (highest inbound connections) versus the fragile orchestrators (highest outbound imports).
> 3. **Security & Vulnerabilities:** Immediately surface any critical threats flagged in the `AI THREAT INTELLIGENCE (XGBoost)` section. If none exist, briefly confirm the repository is secure from recognized structural threats.
> 4. **Outliers & Extremes:** Focus strictly on statistical anomalies. Highlight files or directory groups with massive Cumulative Risk, severe Z-Scores (Architectural Drift), or extreme spikes in individual risk vectors (like State Flux or Cognitive Load). Ignore normal, healthy code.
> 5. **Recommended Next Steps (Refactoring for Stability):** Provide 2-3 highly specific, pragmatic suggestions focused strictly on reducing outliers. Instruct the user on how to refactor high Z-score files, decouple massive central nodes, or mitigate extreme risk exposures to stabilize the system's architecture.
